# TestHomomorphicEncryptionApp

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/testhomomorphicencryptionapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SealJavaWrapper.cpp  base64.cpp
app/src/main/cpp/include/: base64.h  vele_thesis_SealJavaWrapper.h
app/src/main/java/com/example/testhomomorphicencryptionapp/: LatLngEnc.java  MainActivity.java  MapsMarkerActivity.java  MySingleton.java  PathLocationData.java  PathsLocationData.java  SEALConfig.java
app/src/main/res/layout/: activity_main.xml  activity_maps.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/testhomomorphicencryptionapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
